--- a/xalg.yml
+++ b/xalg.yml
@@ -56,10 +56,10 @@
     - profile-developer
 
   vars:
-    - computername: spectr
-    - git_user_name: Roderik van der Veer
-    - git_user_email: roderik.van.der.veer@kunstmaan.be
-    - php_version: 70
+    - computername: xalg
+    - git_user_name: Vincent Flesouras
+    - git_user_email: x.algorithm@gmail.com
+    - php_version: 6
     - sublime_packages:
         - dest: "SideBarEnhancements"
           repo: "https://github.com/titoBouzout/SideBarEnhancements"
